[package]
name = "rock_paper_scissors"
version = "0.1.0"
edition = "2021"
authors = ["TheSeaBass <me@theseabass.com>"]
description = "An implementation of rock paper scissors."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = { version = "3.2.14", features = ["derive"] }